[package]
name = "sbga-dec"
version = "0.2.1"
edition = "2021"
description = "Advanced sega hdd decryptor, written in rust"
authors = ["AsakuraMizu"]
readme = "README.md"

[dependencies]
aes = "0.8.4"
anyhow = "1.0.81"
cbc = { version = "0.1.2", default-features = false }
clap = { version = "4.5.4", features = ["derive"] }
const-hex = "1.11.3"
hex-literal = "0.4.1"
indicatif = "0.17.8"

[profile.release]
strip = true
lto = true
